@@ -90,6 +90,7 @@ Corregido smartload de un archivo de cinta cuando un dsk está insertado
 Corregido visual casette tape al insertar una cinta no soportada
 Corregida pestaña de protección de escritura en ventana de visual hilow datadrive
 Corregida columna del Selector de Archivos para texto "<dir>" en carpetas con caracteres utf-8
+Corregido item de menú de tipo separador en driver video stdout
 
 ----
 
