@@ -154,3 +154,6 @@ quiza no hace falta porque ya hay la opcion de hacerlos visibles siempre
 Lo que no sale al desactivar tooltips es que aparezcan pasados unos segundos
 
 -first aid de main menu salta al pulsar sobre zx desktop, no solo al abrir el menú
+
+-en funcion menu_settings_statistics, tipo MENU_OPCION_SEPARADOR parece que no salen en stdout. deberian salir, aunque no seleccionables,
+pero si mostrables
